<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ITIFighter</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="login_to_continue_your_account">Login to continue your account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait…</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="state">State</string>
    <string name="trade">Trade</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_Profile">My Profile</string>
    <string name="menu_chat">Discussion</string>
    <string name="share">Share</string>
    <string name="rating">Rating</string>
    <string name="change">Change Password</string>
    <string name="logout">Logout</string>
    <string name="username">ITIFighter</string>
    <string name="userEmail">itifighter@yahoo.com</string>
    <string name="menu_groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="user_email">Wiliam@gmail.com</string>
    <string name="UserNameX">Wiliam Snoe</string>
    <string name="LiveTest">Daily Test</string>
    <string name="TestSeries">Series</string>
    <string name="Score">My Score</string>
    <string name="TestX">125</string>
    <string name="Series">1205</string>
    <string name="ScoreX">360</string>
    <string name="Mobile">+91 9551324852</string>
    <string name="ip">127.0.0.1</string>
    <string name="stateX">Uttar Pradesh</string>
    <string name="TradeX">Fitter</string>
    <string name="designed_by_n_sharmask_amp_aj"><![CDATA[Designed & Devloped by \n Sharmask & AJ]]></string>
    <string name="phone">phone</string>
    <string name="value">value</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="rate_our_previous_paper">Rate our previous Paper</string>
    <string name="rate_our_mock_test">Rate our mock test</string>
    <string name="rate_our_test_series">Rate our Tets series</string>
    <string name="rate_our_daily_live_test">Rate our daily live test</string>
    <string name="submit">submit</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="joey_tribbiani">Joey Tribbiani</string>
    <string name="new_york_usa">new york, usa</string>
    <string name="_453k">453K</string>
    <string name="followers">followers</string>
    <string name="_873">873</string>
    <string name="following">following</string>
    <string name="facebook_com_joeytrib">facebook.com/joeytrib</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="_1_202_555_0157" tools:ignore="TypographyDashes">+1–202–555-0157</string>
    <string name="MyScore">My Score</string>
    <string name="MyRank">My Rank</string>
    <string name="add">Add</string>
    <string name="discription">Discription</string>
    <string name="title">title</string>
    <string name="no_users_found">no user found</string>
    <string name="new_message">new message…</string>
    <string name="type_message_here">Type message here</string>
    <string name="rahul_agrawal_is_a_good_boy_but_he_does_not_know_what_he_wants">Rahul Agrawal is a good boy but he does not know what he wants.</string>
    <string name="_17_10">17:10</string>
    <string name="_11_15_pm">11:15 PM</string>
    <string name="r">R</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
    <string name="user_name">User Name</string>
    <string name="last_message">Last Message</string>
    <string name="_06_30pm">06:30PM</string>

    <string name="title_activity_test_questions">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="placeholder_message">Placeholder message</string>
    <string name="rose">Rose</string>
    <string name="how_are_you_doing_this_is_a_long_message_that_should_probably_wrap">How are you doing? This is a long message that should probably wrap.</string>
    <string name="write_a_message">Write a message</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>

    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="www_google_com">www.noobworm.xyz</string>
    <string name="paytm_integrations">Payment integration</string>
    <string name="order_id">order id</string>
    <string name="customer_id">customer_id</string>
    <string name="price">price</string>
    <string name="start_payment">start payment</string>
    <string name="choose_subscription_plan">Choose Subscription</string>
    <string name="start">Start</string>
    <string name="result">Result</string>


</resources>