<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.itifighter.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_menu_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.itifighter.ui.profile.ProfileFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/fragment_menu_profile" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.itifighter.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_menu_chat" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.itifighter.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_menu_groups" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.itifighter.ui.notification.notificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_menu_notification" />

    <fragment
        android:id="@+id/nav_change"
        android:name="com.example.itifighter.ui.change.ChangeFragment"
        android:label="Change Password"
        tools:layout="@layout/fragment_menu_change" />

    <fragment
        android:id="@+id/nav_rating"
        android:name="com.example.itifighter.ui.rating.RatingFragment"
        android:label="Rating"
        tools:layout="@layout/fragment_menu_rating" />

</navigation>