<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ADD8E6"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="320dp">
        <LinearLayout
            android:background="@drawable/bg_login"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/UserImageX"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="@color/startblue30"
                app:civ_border_width="5dp"
                android:src="@drawable/logo"/>
            <TextView
                android:id="@+id/UserNameX"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserNameX"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/LiveTest"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/TestX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/TestX"
                        android:textColor="@color/startblue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TestSeries"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/SeriesX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/Series"
                        android:textColor="@color/startblue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Score"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/ScoreX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/ScoreX"
                        android:textColor="@color/startblue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        tools:ignore="RtlSymmetry">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email_foreground"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_blue"
                android:text="@string/email"
                />
            <TextView
                android:id="@+id/UserEmailX"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/user_email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_phone_foreground"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_blue"
                android:text="@string/phone"
                />
            <TextView
                android:id="@+id/UserMobileX"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:text="@string/Mobile"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_ip_foreground"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_blue"
                android:text="@string/value"
                />
            <TextView
                android:id="@+id/UserIpX"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/ip"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_state_foreground"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_blue"
                android:text="@string/state"
                />
            <TextView
                android:id="@+id/UserStateX"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/stateX"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_trade_foreground"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_blue"
                android:text="@string/trade"
                />
            <TextView
                android:id="@+id/UserTradeX"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/TradeX"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>