<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.rating.RatingFragment" >

    <TextView
        android:id="@+id/rate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_our_app"
        android:textColor="@color/startblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:id="@+id/rate01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate1"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_our_previous_paper"
        android:textColor="@color/startblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:id="@+id/rate02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate2"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/rate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_our_mock_test"
        android:textColor="@color/startblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:id="@+id/rate03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate3"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rate4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_our_test_series"
        android:textColor="@color/startblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:id="@+id/rate04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate4"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rate5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_our_daily_live_test"
        android:textColor="@color/startblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rate05"
        android:numStars="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate5"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btRate"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:background="@drawable/button_gradient"
        android:foregroundGravity="center"
        android:gravity="center"
        android:lineSpacingExtra="34sp"
        android:paddingTop="5dp"
        android:paddingBottom="10.5dp"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate05"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>